# meet-mute-button

./: .gitmodules  README.md  mute_button.uf2
3d-printed-parts/: MeetMuteButton12Bottom.stl  MeetMuteButton12Top.stl  MeetMuteButton16Bottom.stl  MeetMuteButton16Top.stl
code/: CMakeLists.txt
code/src/: mute_button.cc  our_descriptor.cc  our_descriptor.h  tinyusb_stuff.cc  ws2812.cc  ws2812.h
